--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,11 @@ html, body{
     width: 100%;height: 100%;
     overflow-x: hidden;
 }
-.wrapper{width: 100%;height: 100%;}
+.wrapper{
+    width: 100%;
+    height: 100%;
+    font-family: 'Raleway', sans-serif;
+}
 
 /**** PHẦN BANNER ****/
 .banner{
@@ -11,13 +15,14 @@ html, body{
     height: 100%;
     display: flex;
     justify-content: space-between;
+    padding:0 !important;
 }
 .banner .left{
     width: 30%;
 }
 .banner .left img{
     width: 100%;
-    height: 100%;
+    max-height: 100%;
 }
 .banner .right{
     width: 65%;
@@ -37,6 +42,7 @@ html, body{
     width: 80%;
     list-style: none;
     text-align: center;
+    opacity: 0;
 }
 .menuWrapper ul.listMenu a{
     color: rgb(49, 48, 48);
@@ -45,11 +51,28 @@ html, body{
     display: inline-block;
     padding: 0 15px;
 }
+.menuWrapper ul.listMenu li.activeMenu{
+    color: gray;
+}
 .menuWrapper .bars{
     width: 15%;
-    font-size: 30px;
+    height: 100%;
     cursor: pointer;
     color: rgb(49, 48, 48);
+    position: relative;
+}
+.menuWrapper .bars i.hamburger{
+    font-size: 30px;
+    position: absolute;
+    left:0;top:15%;
+    z-index: 2;
+}
+.menuWrapper .bars i.closeTab{
+    font-size: 30px;
+    position: absolute;
+    left:0;top:15%;
+    z-index: 1;
+    opacity: 0;
 }
 .menuWrapper ul.listMenu a:hover,
 .menuWrapper .bars:hover{
@@ -103,9 +126,42 @@ html, body{
     position: absolute;
     top:0;left:0;
 }
-
-/****/
 .banner .right h4{
     color: gray;
 }
 /**** HẾT PHẦN BANNER ****/
+
+
+
+
+
+/**** PHẦN JAVASCRIPT ****/
+.menuWrapper .bars i.show{opacity: 1;z-index: 2;}
+.menuWrapper ul.show{
+    animation: menuShow 0.5s forwards;
+}
+@keyframes menuShow{
+    from{
+        transform: translateX(20px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+.menuWrapper .bars i.hidden{opacity: 0;z-index: 1;}
+.menuWrapper ul.hidden{
+    animation: menuHidden 0.5s forwards;
+}
+@keyframes menuHidden{
+    from{
+        transform: translateX(0);
+        opacity: 1;
+    }
+    to{
+        transform: translateX(30px);
+        opacity: 0;
+    }
+}
+/**** HẾT PHẦN JAVASCRIPT ****/
